k8s-yaml/dev-ns/services/coreapi-cip-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: coreapi-cip-service
spec:
  type: ClusterIP
  selector:
    component: coreapi
  ports:
    - port: 8080
      targetPort: 8080
