k8s-yaml/dev-ns/services/gateway-cip-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-cip-service
spec:
  type: ClusterIP
  selector:
    component: gateway
  ports:
    - port: 3000
      targetPort: 3000
