k8s-yaml/dev-ns/services/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-cip-service
spec:
  type: ClusterIP
  selector:
    component: gateway
  ports:
    - port: 3000
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-web-cip-service
spec:
  type: ClusterIP
  selector:
    component: frontend-web
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: coreapi-cip-service
spec:
  type: ClusterIP
  selector:
    component: coreapi
  ports:
    - port: 8080
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: redis-server-service
spec:
  type: ClusterIP
  selector:
    component: redis-server
  ports:
    - port: 6379
      targetPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: calculator-service
spec:
  type: ClusterIP
  selector:
    component: calculator
  ports:
    - port: 8080
      targetPort: 8080
